# terminalTreeView

./: .coverage  README.md  pyproject.toml  ttv.bat  ttv.ps1  ttv.sh
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/core_nav_20260303/: index.md  metadata.json  plan.md  spec.md
src/terminaltreeview/: app.py  setup.py
src/terminaltreeview.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_app.py  test_scaffolding.py
