[project]
name = "terminaltreeview"
version = "0.1.0"
description = "A interactive terminal directory navigator for Windows."
authors = [
    { name = "FlipNeves" }
]
readme = "README.md"
dependencies = [
    "readchar>=4.0.0",
    "rich>=13.0.0",
]

[project.scripts]
ttv-tool = "terminaltreeview.app:main"
ttv-setup = "terminaltreeview.setup:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
